# fastapi_adapter

./: .gitignore  pyproject.toml
fastapi_adapter/: __init__.py  main.py
fastapi_adapter/patterns/: __init__.py  singleton.py
fastapi_adapter/providers/: __init__.py  comp_impl.py  conf_impl.py  doc_impl.py  exc_impl.py  lif_impl.py  mw_impl.py  server_docs_impl.py  server_events_impl.py  server_functions_impl.py  server_middlewares_impl.py  server_params_impl.py  server_router_impl.py
fastapi_adapter/utils/: __init__.py  context.py  storagerouters.py
