[project]
name = "fastapi-adapater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nestpy-protocols==0.1.0.post2",
]

[[tool.uv.index]]
url = "https://test.pypi.org/simple/"
testpypi = "https://test.pypi.org/simple/"
